fix: extra dot and remvoe extra margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,12 +185,6 @@ a {
   gap: 16px;
 }
 
-@media (min-width: 1158px) {
-  .socials {
-    margin-right: 80px;
-  }
-}
-
 .socials-link {
   width: 40px;
   height: 40px;
